# Concrete_Brutalism

./: .gitignore  CMakeLists.txt  CmakeLists.txt
ref/: Camera.cpp  Core.cpp  GameConfig.cpp  InputHandle.cpp  ModelLoad.h  Player.h  Render.cpp  Render.h  Shaders.h  main.cpp
src/: Camera.cpp  Camera.h  Core.cpp  Core.h  ErrorHandle.cpp  ErrorHandle.h  Game.cpp  Game.h  GameConfig.h  InputHandle.cpp  InputHandle.h  MemoryHandle.h  ModelLoad.cpp  ModelLoad.h  Player.cpp  Player.h  Render.cpp  Render.h  Shaders.cpp  Shaders.h  TerrainFunctions.cpp  inputs.cpp  inputs.h  main.cpp  testing.cpp
src/assets/shaders/: shader.fs
src/comp/: Input.cpp  Input.h  Render.h
src/entities/: Player.h
src/include/: Core.h  TerrainFunctions.h  inputs.h
src/utils/: Utils.cpp  Utils.h
